brocode-rs/tui_app_server/src/bottom_pane/snapshots/brocode_tui_app_server__bottom_pane__chat_composer__tests__empty.snap
---
source: tui_app_server/src/bottom_pane/chat_composer.rs
assertion_line: 6485
expression: terminal.backend()
---
"                                                                                                    "
"› Ask brocode to do anything                                                                        "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  ? for shortcuts                                                                100% context left  "
