brocode-rs/tui_app_server/src/bottom_pane/snapshots/brocode_tui_app_server__bottom_pane__chat_composer__tests__footer_collapse_empty_mode_only.snap
---
source: tui_app_server/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                          "
"› Ask brocode to do anyth "
"                          "
"                          "
"                          "
"                          "
"                          "
"                          "
"       100% context left  "
