brocode-rs/tui_app_server/src/bottom_pane/snapshots/brocode_tui_app_server__bottom_pane__chat_composer__tests__footer_collapse_plan_empty_mode_cycle_without_context.snap
---
source: tui_app_server/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                            "
"› [PROMPT HERE]                             "
"                                            "
"                                            "
"                                            "
"                                            "
"                                            "
"                                            "
"  Plan mode (shift+tab to cycle)            "
