brocode-rs/tui_app_server/src/bottom_pane/snapshots/brocode_tui_app_server__bottom_pane__chat_composer__tests__footer_mode_ctrl_c_interrupt.snap
---
source: tui_app_server/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› Ask brocode to do anything                                                                        "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  ctrl + c again to quit                                                                            "
